# nvim-lens

./: .env  Cargo.toml  config.json
samples/: sample.rs  sample.tsx  sample_diff_1.rs
site/: package.json  types.ts
site/pages/: [pluginId].tsx  _app.tsx  _document.tsx  index.tsx
site/styles/: globals.css
site/util/: cn.ts  config.ts  index.ts
src/: args.rs  color.rs  config.rs  main.rs  nvim.rs  vte.rs
